--- a/style.css
+++ b/style.css
@@ -236,9 +236,13 @@ body {
   position: fixed;
   top: 20px;
   right: 20px;
-  font-size: 28px;
+  width: 30px;
+  height: 25px;
   cursor: pointer;
   z-index: 1001;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 /* Hidden slide-out menu */
@@ -269,3 +273,8 @@ body {
   right: 0;
 }
 
+.menu-toggle span {
+  height: 4px;
+  background-color: #333;
+  border-radius: 2px;
+}
