--- a/style.css
+++ b/style.css
@@ -273,8 +273,9 @@ body {
   right: 0;
 }
 
-.menu-toggle span {
-  height: 4px;
-  background-color: #333;
-  border-radius: 2px;
+  .menu-toggle span {
+  height: 5px;           /* Thicker lines */
+  background-color: #000; /* Darker for boldness */
+  border-radius: 3px;
+  width: 100%;
 }
