--- a/style.css
+++ b/style.css
@@ -260,7 +260,7 @@ body {
   }
 
   .signup-btn:hover {
-    background-color: #0056b3;
-    border-color: #0056b3;
+    background-color: #3492f7;
+    border-color: #3492f7;
   }
 </style>
