--- a/style.css
+++ b/style.css
@@ -249,9 +249,9 @@ body {
   }
 
   .signup-btn {
-    background-color: #007bff;
+    background-color: #FFFFFF;
     color: black;
-    border: 2px solid #007bff;
+    border: 2px solid #FFFFFF;
     padding: 6px 12px;
     text-decoration: none;
     border-radius: 4px;
