--- a/style.css
+++ b/style.css
@@ -249,9 +249,9 @@ body {
   }
 
   .signup-btn {
-    background-color: #FFFFFF;
+    background-color: #0465cc;
     color: black;
-    border: 2px solid #FFFFFF;
+    border: 2px solid #0465cc;
     padding: 6px 12px;
     text-decoration: none;
     border-radius: 4px;
