--- a/style.css
+++ b/style.css
@@ -374,6 +374,10 @@ body {
       background-color: #0056b3 !important;
       color: white !important;
     }
+
+    p.one {
+     word-spacing: 10px;
+    }
   </style>
 
 
