--- a/style.css
+++ b/style.css
@@ -39,8 +39,12 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem 4rem;
+  padding: 1rem 2rem;
   background-color: white;
+}
+
+.nav a:first-child {
+  margin-left: auto;
 }
 
 .nav a {
